almost finish products apis
