# src/infrastructure/di/registerUseCases.ts
@@ -5,6 +5,13 @@ import { DeleteMainCategoryUseCase } from "@application/use-cases/main-category/
 import { CreateSubcategoryUseCase } from "@application/use-cases/subcategory/CreateSubcategoryUseCase";
 import { UpdateSubcategoryUseCase, SubcategoryNotFoundError } from "@application/use-cases/subcategory/UpdateSubcategoryUseCase";
 import { DeleteSubcategoryUseCase } from "@application/use-cases/subcategory/DeleteSubcategoryUseCase";
+import { GetSubcategoriesUseCase } from "@application/use-cases/subcategory/GetSubcategoriesUseCase";
+import { CreateProductUseCase } from "@application/use-cases/product/CreateProductUseCase";
+import { UpdateProductUseCase } from "@application/use-cases/product/UpdateProductUseCase";
+import { DeleteProductUseCase } from "@application/use-cases/product/DeleteProductUseCase";
+import { GetProductUseCase } from "@application/use-cases/product/GetProductUseCase";
+import { GetAllProductsUseCase } from "@application/use-cases/product/GetAllProductsUseCase";
+import { GetVisibleProductsUseCase } from "@application/use-cases/product/GetVisibleProductsUseCase";
 import { RegisteredRepositories } from "@infrastructure/di/registerRepositories";
 import { RegisteredServices } from "@infrastructure/di/registerServices";
 
@@ -16,6 +23,13 @@ export interface RegisteredUseCases {
   deleteMainCategoryUseCase: DeleteMainCategoryUseCase;
   updateSubcategoryUseCase: UpdateSubcategoryUseCase;
   deleteSubcategoryUseCase: DeleteSubcategoryUseCase;
+  getSubcategoriesUseCase: GetSubcategoriesUseCase;
+  createProductUseCase: CreateProductUseCase;
+  updateProductUseCase: UpdateProductUseCase;
+  deleteProductUseCase: DeleteProductUseCase;
+  getProductUseCase: GetProductUseCase;
+  getAllProductsUseCase: GetAllProductsUseCase;
+  getVisibleProductsUseCase: GetVisibleProductsUseCase;
 }
 
 export function registerUseCases(
@@ -55,6 +69,36 @@ export function registerUseCases(
     deps.subcategoryRepository
   );
 
+  const getSubcategoriesUseCase = new GetSubcategoriesUseCase(
+    deps.subcategoryRepository
+  );
+
+  const createProductUseCase = new CreateProductUseCase(
+    deps.productRepository,
+    deps.subcategoryRepository
+  );
+
+  const updateProductUseCase = new UpdateProductUseCase(
+    deps.productRepository,
+    deps.subcategoryRepository
+  );
+
+  const deleteProductUseCase = new DeleteProductUseCase(
+    deps.productRepository
+  );
+
+  const getProductUseCase = new GetProductUseCase(
+    deps.productRepository
+  );
+
+  const getAllProductsUseCase = new GetAllProductsUseCase(
+    deps.productRepository
+  );
+
+  const getVisibleProductsUseCase = new GetVisibleProductsUseCase(
+    deps.productRepository
+  );
+
   return {
     createMainCategoryUseCase,
     getMainCategoriesWithSubcategoriesUseCase,
@@ -62,7 +106,14 @@ export function registerUseCases(
     updateMainCategoryUseCase,
     deleteMainCategoryUseCase,
     updateSubcategoryUseCase,
-    deleteSubcategoryUseCase
+    deleteSubcategoryUseCase,
+    getSubcategoriesUseCase,
+    createProductUseCase,
+    updateProductUseCase,
+    deleteProductUseCase,
+    getProductUseCase,
+    getAllProductsUseCase,
+    getVisibleProductsUseCase
   };
 }
 
